--- a/CSS/principal.css
+++ b/CSS/principal.css
@@ -8,7 +8,8 @@
 
 html {
     font-size: var(--font-size-base);
-
+    letter-spacing: 0.12rem;
+    word-spacing: 0.16rem;
 }
 
 body {
@@ -16,9 +17,9 @@ body {
     font-weight: var(--font-weight-normal);
     line-height: var(--line-height-base); /*Interlineado*/
     color: var(--color-text);
-    background: var(--color-bg);
-    display: flex;
-    flex-direction: column;
+    background: var(--color-white);
+    display: flex; /*Diseño de caja flexible.*/
+    flex-direction: column; /*Dirección de los elementos en columna.*/
 }
 
 /* Tipografía */
@@ -33,5 +34,5 @@ h1 { font-size: var(--font-size-h1); }
 h2 { font-size: var(--font-size-h2); margin-top: var(--spacing-xl); }
 h3 { font-size: var(--font-size-h3); margin-top: var(--spacing-lg); }
 
-p { margin-bottom: var(--spacing-md); }
-
+p { margin-bottom: var(--spacing-xl);
+}
