--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -10,10 +10,11 @@
     --font-size-h1: 2rem;
     --font-size-h2: 1.5rem;
     --font-size-h3: 1.25rem;
+    --font-size-base: 14px;
   }
 
-  header, main {
-    padding: var(--spacing-md);
+  header, body, main {
+    padding: var(--spacing-lg) var(--spacing-md);
   }
 
   nav[aria-label="Índice alfabético"] ul { /* Columnas flexibles según ancho */
@@ -37,9 +38,11 @@
     --font-size-h1: 3rem;
     --font-size-h2: 2.25rem;
     --font-size-h3: 1.75rem;
+    --font-size-base: 16px;
+
   }
 
-  header, main {
+  header, body, main {
     padding: var(--spacing-xl) var(--spacing-lg);
   }
 
@@ -67,9 +70,11 @@
     --font-size-h1: 4rem;
     --font-size-h2: 3rem;
     --font-size-h3: 2.25rem;
+    --font-size-base: 20px;
+
   }
 
-  header, main {
+  header, body, main {
     padding: var(--spacing-xxl) var(--spacing-xl);
   }
 
@@ -77,7 +82,6 @@
     grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
   }
 
-  
   form {
   padding: var(--spacing-xxl);
   }
@@ -92,9 +96,9 @@
   }
 }
 
-/* Impresión */
+/* Impresión solo del contenido textual*/
 @media print {
-  header, footer, nav, aside {
+  span, .breadcrumb, footer, nav, aside {
     display: none;
   }
 
