--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -9,7 +9,7 @@
   --color-white: #ffffff;
   --color-bg-alt: #f5f5f5;
   
-  --color-error: #c41e3a;
+  --color-error: #A31830;
   
   --color-border: #cccccc;
   --color-border-light: #e0e0e0;
@@ -24,7 +24,6 @@
   
   --line-height-base: 1.6;
   --line-height-heading: 1.5;
-
   /* Espaciado */
   --spacing-xs: 0.25rem;
   --spacing-sm: 0.5rem;
